<resources>
    <string name="app_name">Project2_2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="button_stop">Stop</string>
    <string name="button_Previous">Previous Workout</string>
    <string name="button_Next">Next Workout</string>
    <string name="button_Workout">Start Workout</string>

    <string name="textView_distance">Distance: %1$d miles</string>
    <string name="textView_date">Date: %1$s</string>
    <string name="textView_rating">Rating: %1$d</string>
    <string name="textView_time">Time: %1$d</string>
    <string name="textview_timer">Time: %1$02d:%2$02d:%3$02d:%4$d</string>
    <string name="textView_Start">Start</string>

</resources>